--- a/templates/index.html
+++ b/templates/index.html
@@ -785,7 +785,7 @@ python app.py                        # Run directly with Python</code></pre>
                 <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
                     <h6 class="text-white mb-3">Resources</h6>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="#" class="footer-link">Documentation</a></li>
+                        <li class="mb-2"><a href="/api/docs" class="footer-link">Documentation</a></li>
                         <li class="mb-2"><a href="#" class="footer-link">Tutorials</a></li>
                         <li class="mb-2"><a href="#" class="footer-link">API Docs</a></li>
                         <li><a href="#" class="footer-link">Case Studies</a></li>
