--- a/templates/index.html
+++ b/templates/index.html
@@ -303,6 +303,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#api">API Reference</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/api/docs">Docs</a>
+                    </li>
+                    <a href="/predict" class="btn btn-accent">
+                        <i class="bi bi-calculator me-1"></i> Try Risk Prediction
+                    </a>
                     <li class="nav-item ms-2">
                         <a class="btn btn-accent" href="/admin">
                             <i class="bi bi-speedometer2 me-1"></i> Dashboard
